# summarize

./: .dockerignore  .editorconfig  Dockerfile  LICENSE  Makefile  docker-compose.yml
api/: .editorconfig  .env.example  .gitignore  alembic.ini  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 1745937277-93d4b96848e5_add_pgvector_extension.py  1745937618-bbae2ae132ff_added_article_embedding_and_question_.py  1748770647-b633ed550e2c_added_models_including_article_note_and_.py  1749302423-4e3c52fe65fd_added_request_log_model.py  1750600757-b6b6de601e4a_added_auth_and_user_related_models.py  1750687490-9b817947bbb8_update_nullable_constraints_for_auth_.py
api/src/: main.py
api/src/analytics/: decorators.py  service.py  tasks.py
api/src/analytics/models/: request_log.py
api/src/analytics/schemas/: internals.py
api/src/articles/: controller.py  models.py  schemas.py  service.py  utils.py
api/src/articles/models/: article.py  (+1 more)
api/src/auth/: controller.py  dependencies.py  service.py
api/src/database/: service.py
api/src/embeddings/: models.py  service.py  utils.py
api/src/error_handlers/: decorators.py  service.py
api/src/errors/: models.py
api/src/health/: controller.py
api/src/loggers/: base.py  service.py
api/src/mails/: service.py  tasks.py  utils.py
api/src/middlewares/: request_and_response_logger.py  request_body_size_limiter.py
api/src/notes/: service.py
api/src/prompts/: service.py
api/src/question_and_answers/: controller.py  models.py  schemas.py  service.py
api/src/rate_limiter/: service.py
api/src/settings/: base.py  service.py  utils.py
api/src/users/: controller.py  service.py
api/src/utils/: constants.py  custom_api_route.py  custom_jsonb.py  extract_request_body.py  metadata.py  retrieve_target_from_kwargs.py  temporary_disable.py
(+153 files in other folders)
