[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "pytest>=8.3.5",
]
