[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.11.18",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.23",
    "langchain-deepseek>=0.1.3",
    "pgvector>=0.4.1",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.ruff.lint]
extend-select = ["I"]
